# FMUiL

./: .gitignore  LICENSE  README.md  config.yaml  dev_data_loader.py  dev_db_read.py  main.py  pyproject.toml  requirements.txt  requirements.txt.old
FMUs/: LOC_CNTRL_custom_linux.fmu  LOC_SYSTEM_linux.fmu  PIcontroller.fmu  tank.fmu
OPCUA-FMU-Simulator-package/: pyproject.toml
OPCUA-FMU-Simulator-package/src/OPCUA_FMU_Simulator/: connections.py  fmu_loader.py  server_setup_dev.py  test_runner.py
OPCUA-FMU-Simulator-package/src/OPCUA_FMU_Simulator/infra/: clients.py  servers.py
SimpleTestFMUs/SimpleTestFMUs/: TEST01.yaml
TESTS/: TEST01.yaml  TEST02.yaml  TEST03.yaml  system_config.yaml
UNIT_TESTS/: test_single_step_outcome.py
UNIT_TESTS/test_files/: single_step_test.yaml
examples/External server/: README.md
examples/External server/server/: example_server.yaml
examples/Lube oil cooling/: README.md
examples/Lube oil cooling/FMUs/: LOC_System.fmu
examples/Watertanksystem/: README.md  exp1_water_tank.yaml
examples/Watertanksystem/FMUs/: WaterTankSystem.fmu
examples/plotting/: softwarex_plot.py
examples/plotting/SoftwareX/HiL/: Evaluation.csv  Values.csv
examples/plotting/SoftwareX/MiL/: Values.csv  (+1 more)
experiments/: ECC_MQTT.yaml  ECC_Modbus_RTU.yaml  ECC_Modbus_TCP.yaml  ECC_PLC.yaml  README.md  SoftwareX_water_tank.yaml  SoftwareX_water_tank_plc.yaml  TEST01.yaml  TEST03.yaml  exp1_water_tank.yaml  exp2_loc.yaml  exp3_external_server.yaml
experiments/fmus/: TankLevel_PI_mod.fmu  WaterTankSystemV2.fmu  gain.fmu
experiments/fmus/LOC_Control/: modelDescription.xml
experiments/fmus/TankLevel_PI/: modelDescription.xml
experiments/fmus/TankLevel_PI_mod/: modelDescription.xml
experiments/servers/: ECC_S7-1500.yaml  MQTTBridge.yaml  ModbusRTUBridge.yaml  ModbusTCPBridge.yaml  S7-1500.yaml
fmu/: LOC_Control.fmu
fmus/: TankLevel_PI.fmu
headers/: __init__.py  config_loader.py  connections.py  fmu_loader.py  operations.py  reading_and_evaluation.py  server_setup_dev.py  system_tester.py  test_runner.py
headers/infra/: clients.py  servers.py
main/: main.py
main/headers/: fmu_loader.py
servers/: example_server.py  example_server.yaml
src/FMUiL/: __init__.py  cli.py
src/FMUiL/communications/: __init__.py  clients.py  server_setup.py  server_setup_dev.py  servers.py
src/FMUiL/handlers/: __init__.py  config_handler.py  fmu_handler.py  simulation_handler.py
src/FMUiL/logger/: __init__.py  experiment_logger.py  plotting.py
src/FMUiL/models/: __init__.py  config_loader.py  fmu_loader.py
src/FMUiL/schema/: schema.py
src/FMUiL/schemas/: __init__.py  schema.py
src/FMUiL/simulator/: __init__.py  experiment_controller.py
src/FMUiL/utils/: __init__.py
src/opcua_fmu_simulator/: __init__.py  config.py  config_loader.py  experiment_controller.py  fmu_loader.py  logging_utils.py  operations.py  schema.py  server_setup_dev.py  test_runner.py  utils.py
src/opcua_fmu_simulator/db/: api.py  connection.py
src/opcua_fmu_simulator/infra/: clients.py  servers.py
test_servers/: server_description01.yaml  test_server01.py
utility_function_development/: main.py  opc_server_serup.ipynb  opcua_server_setup.py  setup_opcua_from_fmu.ipynb  system_config.yaml  test_connection.ipynb  utilities.ipynb
utility_function_development/TESTS/: system_config.yaml
utility_function_development/headers/: fmu_loader.py  server_setup_dev.py  system_tester.py
(+1 files in other folders)
