[project]
name = "FMUiL"
version = "0.1.0"
description = "Functional Mock-up Units in the loop simulations"
readme = "README.md"
requires-python = ">=3.11"
scripts = { experiments = "FMUiL.cli:app" }
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "asyncua>=1.1.8",
    "attrs>=25.3.0",
    "build>=1.3.0",
    "cffi>=2.0.0",
    "colorama>=0.4.6",
    "cryptography>=45.0.7",
    "fmpy>=0.3.26",
    "jinja2>=3.1.6",
    "lark>=1.2.2",
    "lxml>=6.0.1",
    "markupsafe>=3.0.2",
    "msgpack>=1.1.1",
    "numpy>=2.3.3",
    "pycparser>=2.23",
    "pydantic>=2.11.7",
    "pyopenssl>=25.1.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pywin32>=311",
    "pyyaml>=6.0.2",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "sortedcontainers>=2.4.0",
    "typer>=0.19.2",
    "typing-extensions>=4.15.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uvicorn.scripts]
experiments = "FMUiL.cli:app"
