[project]
name = "FMUiL"
version = "0.2.0"
description = "Functional Mock-up Units in the loop simulations"
readme = "README.md"
requires-python = ">=3.11"
scripts = { fmuil = "FMUiL.cli:app" }
dependencies = [
    "asyncua>=1.1.8",
    "colorama>=0.4.6",
    "fmpy>=0.3.26",
    "numpy>=2.3.3",
    "pydantic>=2.11.7",
    "pywin32>=311",
    "pyyaml>=6.0.2",
    "typer>=0.19.2",
    "typing-extensions>=4.15.0",
    ]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

